Add Rate Limiting Middleware
Based on the ubiquitous leaky bucket algorithm, this version does
synchronous leaks and is non-blocking.  The middleware packages this all
up into something that initially does global and per-endpoint rate
limits.
